Better outro and db:sample_data.

--- a/templates/config.root/database.yml.erb
+++ b/templates/config.root/database.yml.erb
@@ -1,6 +1,9 @@
+# Use 'createuser -s postgres' to create a general purpose db (super)user.
+
 development: &default
   adapter: postgresql
   database: <%= app_name %>_development
+  username: postgres
   pool: 5
   timeout: 5000
 
