--- a/templates/app.root/views/layouts/application.html.slim.erb
+++ b/templates/app.root/views/layouts/application.html.slim.erb
@@ -13,14 +13,16 @@ html
           nav.navbar-inner
             .container
               .brand <%= app_name.capitalize %>
-              - if current_user
-                ul.nav.pull-right
+              ul.nav.pull-right
+                - if current_user
                   li.dropdown
                     a.dropdown-toggle href='#' data-toggle='dropdown'
                       = current_user.email
                       b.caret
                     ul.dropdown-menu
                       li= link_to 'Sign Out', sign_out_path
+                - else
+                  li= link_to 'Sign in', sign_in_path
 
         - flash.each do |name, msg|
           = content_tag :div, raw(msg), class: "alert #{alert_class(name)}"
