--- a/templates/app.root/assets/stylesheets/application.css.less
+++ b/templates/app.root/assets/stylesheets/application.css.less
@@ -1,41 +1,8 @@
 @import 'twitter/bootstrap';
-
-@footerHeight: 30px;
+@import '_footer';
 
 // Navbar
 
 .wrapper > .container {
   padding-top: 60px; // Push the content down so that it's below our pinned navbar.
 }
-
-// Sticky Footer
-
-html, body {
-  height: 100%;
-}
-
-.wrapper {
-  min-height: 100%;
-  height: auto !important;
-  height: 100%;
-  margin: 0 auto -(@footerHeight + 1);
-}
-
-.push {
-  height: @footerHeight + 20px; // The extra prevents content from bumping right into our footer.
-}
-
-footer {
-  height: @footerHeight;
-  line-height: @footerHeight;
-
-  .container {
-    border-top: 1px solid @grayLighter;
-  }
-
-  p {
-    margin: 0;
-    color: @grayLight;
-  }
-}
-
