Minor readme tweaks.

--- a/templates/README.md.erb
+++ b/templates/README.md.erb
@@ -6,19 +6,24 @@ Overview
 Requirements
 ============
 
-* ruby 1.9.3-p192
-* postgresql 9.1.x
+* ruby 1.9.?
+* postgresql 9.?
 
-Running Specs
-=============
+Running the Specs
+=================
 
 $ rake db:setup db:test:prepare
 $ rake
 
-Running Application
-===================
+Running the Application
+=======================
 
 $ rails s
+
+Using Guard
+===========
+
+$ guard -c
 
 Considerations
 ==============
