Mention that a postgresql user called 'postgres' (no password) is required. (and a few markdown fixes)

--- a/templates/README.md.erb
+++ b/templates/README.md.erb
@@ -7,7 +7,7 @@ Requirements
 ============
 
 * ruby 1.9.?
-* postgresql 9.?
+* postgresql 9.? (user 'postgres' with no password)
 
 Running the Specs
 =================
