--- a/templates/_lib/templates/slim/scaffold/show.html.slim
+++ b/templates/_lib/templates/slim/scaffold/show.html.slim
@@ -1,10 +1,10 @@
 .page-header
-  h1 <%= singular_table_name %>
+  h1 <%= singular_table_name.capitalize %>
 
+dl
 <% attributes.each do |attribute| -%>
-p
-  strong <%= attribute.human_name %>:
-  = @<%= singular_table_name %>.<%= attribute.name %>
+  dt <%= attribute.human_name %>
+  dd= @<%= singular_table_name %>.<%= attribute.name %>
 <% end -%>
 
 = link_to 'Edit', edit_<%= singular_table_name %>_path(@<%= singular_table_name %>), class: 'btn'
