Use the right absolute urls (for the environment) when sending activation emails.

--- a/app_prototype/app/views/user_mailer/activation_needed_email.html.erb
+++ b/app_prototype/app/views/user_mailer/activation_needed_email.html.erb
@@ -10,7 +10,7 @@
       your username is: <%= @user.email %>.<br/>
     </p>
     <p>
-      To login to the site, just follow this link: <%= @url %>.
+      To login to the site, just follow this link: <%= link_to activate_registration_url(@user.activation_token), activate_registration_url(@user.activation_token) %>.
     </p>
     <p>Thanks for joining and have a great day!</p>
   </body>
