--- a/app_prototype/app/views/user_mailer/activation_success_email.html.erb
+++ b/app_prototype/app/views/user_mailer/activation_success_email.html.erb
@@ -10,7 +10,7 @@
       your username is: <%= @user.email %>.<br/>
     </p>
     <p>
-      To login to the site, just follow this link: <%= @url %>.
+      To login to the site, just follow this link: <%= link_to sign_in_url, sign_in_url %>.
     </p>
     <p>Thanks for joining and have a great day!</p>
   </body>
