--- a/app_prototype/app/views/user_mailer/activation_success_email.text.erb
+++ b/app_prototype/app/views/user_mailer/activation_success_email.text.erb
@@ -4,6 +4,6 @@ Congratz, <%= @user.email %>
 You have successfully activated your example.com account,
 your username is: <%= @user.email %>.
  
-To login to the site, just follow this link: <%= @url %>.
+To login to the site, just follow this link: <%= sign_in_url %>
  
 Thanks for joining and have a great day!
