--- a/app_prototype/app/views/user_mailer/reset_password_email.html.erb
+++ b/app_prototype/app/views/user_mailer/reset_password_email.html.erb
@@ -9,7 +9,7 @@
       You have requested to reset your password.
     </p>
     <p>
-      To choose a new password, just follow this link: <%= @url %>.
+      To choose a new password, just follow this link: <%= link_to edit_password_reset_url(@user.reset_password_token), edit_password_reset_url(@user.reset_password_token) %>.
     </p>
     <p>Have a great day!</p>
   </body>
