Consistent titlecasing on action buttons.

--- a/app_prototype/app/views/registrations/new.html.slim
+++ b/app_prototype/app/views/registrations/new.html.slim
@@ -10,4 +10,4 @@
     = f.input :password
 
   .form-actions
-    = f.button :submit, 'Sign up', class: 'btn btn-primary'
+    = f.button :submit, 'Sign Up', class: 'btn btn-primary'
