--- a/app_prototype/app/views/layouts/application.html.slim
+++ b/app_prototype/app/views/layouts/application.html.slim
@@ -22,7 +22,7 @@ html
                     ul.dropdown-menu
                       li= link_to 'Sign Out', sign_out_path
                 - else
-                  li= link_to 'Sign in', sign_in_path
+                  li= link_to 'Sign In', sign_in_path
 
         - flash.each do |name, msg|
           = content_tag :div, raw(msg), class: "alert #{alert_class(name)}"
