--- a/app_prototype/app/views/password_resets/new.html.slim
+++ b/app_prototype/app/views/password_resets/new.html.slim
@@ -8,4 +8,4 @@
       = text_field_tag :email, nil, placeholder: 'joe@example.com'
 
   .form-actions
-    = submit_tag "Reset my password!", class: 'btn btn-primary'
+    = submit_tag "Reset My Password!", class: 'btn btn-primary'
