--- a/app_prototype/app/views/user_mailer/reset_password_email.text.erb
+++ b/app_prototype/app/views/user_mailer/reset_password_email.text.erb
@@ -3,6 +3,6 @@ Hello, <%= @user.email %>
  
 You have requested to reset your password.
  
-To choose a new password, just follow this link: edit_password_reset_url(@user.reset_password_token)
+To choose a new password, just follow this link: <%= reset_password_url(@user.reset_password_token) %>
  
 Have a great day!
