--- a/app_prototype/app/assets/stylesheets/application.css.less
+++ b/app_prototype/app/assets/stylesheets/application.css.less
@@ -1,8 +1,3 @@
 @import 'twitter/bootstrap';
+@import '_navbar';
 @import '_footer';
-
-// Navbar
-
-.wrapper > .container {
-  padding-top: 60px; // Push the content down so that it's below our pinned navbar.
-}
