Slightly better email content.

--- a/app_prototype/app/views/user_mailer/activation_needed_email.html.erb
+++ b/app_prototype/app/views/user_mailer/activation_needed_email.html.erb
@@ -4,9 +4,9 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>Welcome to example.com, <%= @user.email %></h1>
+    <h1>Welcome to App Prototype, <%= @user.email %></h1>
     <p>
-      You have successfully signed up to example.com,
+      You have successfully signed up to app_prototype.herokuapp.com,
       your username is: <%= @user.email %>.<br/>
     </p>
     <p>
