--- a/app_prototype/app/views/user_mailer/activation_needed_email.text.erb
+++ b/app_prototype/app/views/user_mailer/activation_needed_email.text.erb
@@ -1,7 +1,7 @@
-Welcome to example.com, <%= @user.email %>
+Welcome to App Prototype, <%= @user.email %>!
 ===============================================
  
-You have successfully signed up to example.com,
+You have successfully signed up to app_prototype.herokuapp.com,
 your username is: <%= @user.email %>.
  
 To login to the site, just follow this link: <%= activation_url(@user.activation_token) %>
