--- a/app_prototype/app/views/user_mailer/activation_success_email.text.erb
+++ b/app_prototype/app/views/user_mailer/activation_success_email.text.erb
@@ -1,9 +1,9 @@
-Congratz, <%= @user.email %>
+Congratulations, <%= @user.email %>!
 ===============================================
  
-You have successfully activated your example.com account,
+You have successfully activated your App Prototype account,
 your username is: <%= @user.email %>.
  
-To login to the site, just follow this link: <%= sign_in_url %>
+Go ahead and sign in to the site: <%= sign_in_url %>
  
 Thanks for joining and have a great day!
