--- a/app_prototype/app/views/user_mailer/reset_password_email.html.erb
+++ b/app_prototype/app/views/user_mailer/reset_password_email.html.erb
@@ -6,10 +6,10 @@
   <body>
     <h1>Hello, <%= @user.email %></h1>
     <p>
-      You have requested to reset your password.
+      Someone requested to reset your password. If it wasn't you, just disregard this email.
     </p>
     <p>
-      To choose a new password, just follow this link: <%= link_to reset_password_url(@user.reset_password_token), reset_password_url(@user.reset_password_token) %>.
+      To choose a new password, follow this link: <%= link_to reset_password_url(@user.reset_password_token), reset_password_url(@user.reset_password_token) %>.
     </p>
     <p>Have a great day!</p>
   </body>
