--- a/app_prototype/app/views/user_mailer/reset_password_email.text.erb
+++ b/app_prototype/app/views/user_mailer/reset_password_email.text.erb
@@ -1,8 +1,8 @@
 Hello, <%= @user.email %>
 ===============================================
+
+Someone requested to reset your password. If it wasn't you, just disregard this email.
  
-You have requested to reset your password.
- 
-To choose a new password, just follow this link: <%= reset_password_url(@user.reset_password_token) %>
+To choose a new password, follow this link: <%= reset_password_url(@user.reset_password_token) %>
  
 Have a great day!
