--- a/app_prototype/app/views/user_mailer/activation_needed_email.html.erb
+++ b/app_prototype/app/views/user_mailer/activation_needed_email.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h1>Welcome to App Prototype, <%= @user.email %></h1>
     <p>
-      You have successfully signed up to app_prototype.herokuapp.com,
+      You have successfully signed up to app-prototype.herokuapp.com,
       your username is: <%= @user.email %>.<br/>
     </p>
     <p>
