Whoops, broke some stuff while tweaking emails.

--- a/app_prototype/app/views/user_mailer/activation_success_email.html.erb
+++ b/app_prototype/app/views/user_mailer/activation_success_email.html.erb
@@ -10,7 +10,7 @@
       your username is: <%= @user.email %>.<br/>
     </p>
     <p>
-      <%= "Sign In Now", sign_in_url %>.
+      <%= link_to "Sign In Now", sign_in_url %>.
     </p>
     <p>Thanks for joining and have a great day!</p>
   </body>
