update to bootstrap 3

--- a/rails_40/app/views/pages/root.html.slim
+++ b/rails_40/app/views/pages/root.html.slim
@@ -3,7 +3,7 @@ javascript:
     $('.hero-unit p:last').after("<p>Enjoy!</p>")
   });
 
-.hero-unit
+.jumbotron
   h1 Hello, world!
   br
   p Welcome to your newly generated rails application...
